# AIMineGuard

./: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  test_system.py
backend/: README.md  alembic.ini  env.example  init_db.py  package.json  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: alerts.py  auth.py  environment_data.py  equipment.py  maintenance.py  mines.py
backend/app/core/: config.py  deps.py  enums.py  security.py
backend/app/crud/: __init__.py  alert.py  environment_data.py  equipment.py  maintenance_record.py  mine.py  user.py
backend/app/database/: database.py  env.py
backend/app/models/: __init__.py  alert.py  environment.py  environment_data.py  equipment.py  maintenance_record.py  mine.py  monitoring_point.py  user.py
backend/app/schemas/: __init__.py  alert.py  environment_data.py  equipment.py  maintenance_record.py  mine.py  monitoring_point.py  user.py
backend/scripts/: init_db.py
docs/: README.md
frontend/: index.html  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/app/: page.tsx
frontend/src/app/alerts/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/components/: Layout.tsx
frontend/src/hooks/: useAlerts.ts  useAuth.ts  useEnvironmentData.ts  useMines.ts
frontend/src/pages/: AlertsPage.tsx  DashboardPage.tsx  LoginPage.tsx  MinesPage.tsx  RegisterPage.tsx
frontend/src/services/: alerts.ts  api.ts  auth.ts  index.ts  mines.ts  system.ts
frontend/src/types/: index.ts
(+7 files in other folders)
